<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_white_24"
        android:orderInCategory="80"
        android:title="@string/title_map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_forum_24"
        android:orderInCategory="90"
        android:title="@string/title_forum"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_more_vert_24"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/logout_navigation"
                android:icon="@drawable/ic_exit_to_app_24"
                android:orderInCategory="90"
                android:title="@string/logout"
                app:showAsAction="never" />
        </menu>
    </item>

    <!--
    <item
        android:icon="@drawable/ic_more_vert_24"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/navigation_filter_new"
                    android:orderInCategory="100"
                    android:title="@string/new_posted"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/navigation_filter_high_low"
                    android:orderInCategory="100"
                    android:title="@string/price_top_bottom"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/navigation_filter_low_high"
                    android:orderInCategory="100"
                    android:title="@string/price_bottom_top"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/navigation_filter_bed_high_low"
                    android:orderInCategory="100"
                    android:title="@string/room_bottom_top"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/navigation_filter_bed_low_high"
                    android:orderInCategory="100"
                    android:title="@string/room_bottom_to_top"
                    app:showAsAction="never" />
            </group>

        </menu>
    </item>
    -->

</menu>