<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment_activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true" />

        <include
            layout="@layout/fragment_bottom_nav_drawer" />


        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="@dimen/bottom_app_bar_fab_cradle_margin"
            app:fabCradleRoundedCornerRadius="@dimen/bottom_app_bar_fab_cradle_corner_radius"
            app:hideOnScroll="true">

            <LinearLayout
                android:id="@+id/bottom_app_bar_content_container"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/min_touch_target_size"
                android:layout_marginVertical="@dimen/grid_0_5"
                android:foreground="@drawable/bottom_app_bar_title_foreground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/grid_0_5">

                <ImageView
                    android:id="@+id/bottom_app_bar_chevron"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/bottom_app_bar_chevron_content_desc"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_arrow_up_24"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/bottom_app_bar_logo"
                    android:layout_width="@dimen/bottom_app_bar_logo_size"
                    android:layout_height="@dimen/bottom_app_bar_logo_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/grid_1"
                    android:contentDescription="@string/bottom_app_bar_logo_content_desc"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/img_app_logo"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/bottom_app_bar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/josefinsans_bold2"
                    android:text="@string/navigation_home"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="?attr/colorControlNormal" />

            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange_500"
            android:contentDescription="@string/fab_search_request"
            android:visibility="visible"
            app:layout_anchor="@id/bottom_app_bar"
            app:srcCompat="@drawable/ic_baseline_sort_24"
            app:tint="@color/white_50" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>