<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filters_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/josefinsans_bold2"
        android:text="@string/title_filter"
        android:textColor="@color/orange_500"
        android:textSize="17sp" />

    <!-- Food Type -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_category"
            style="@style/Theme.ProxyGuide_app.FilterIcon"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_poi_country_24"
            app:tint="@color/grey_blue_700" />

        <Spinner
            android:id="@+id/spinner_country"
            style="@style/Theme.ProxyGuide_app.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/icon_category"
            android:entries="@array/country_poi" />

    </RelativeLayout>

    <!-- Location -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_city"
            style="@style/Theme.ProxyGuide_app.FilterIcon"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_poi_city_24"
            app:tint="@color/grey_blue_700" />

        <Spinner
            android:id="@+id/spinner_city"
            style="@style/Theme.ProxyGuide_app.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/icon_city"
            android:entries="@array/cities" />

    </RelativeLayout>

    <!-- Cancel and apply buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/grey_blue_700" />


        <Button
            android:id="@+id/button_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/orange_500"
            android:text="@string/apply" />

    </LinearLayout>

</LinearLayout>

