<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/poi_picture"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@drawable/poi_placehiolder" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/favorite"
                android:scaleType="centerCrop"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_favorite_white_border_24"
                app:tint="@color/orange_500" />

            <TextView
                android:id="@+id/poi_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="165dp"
                android:background="@color/grey_blue_700"
                android:fontFamily="@font/josefinsans_bold2"
                android:paddingStart="8dp"
                android:text="Gamla Stan"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/poi_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/poi_picture"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/josefinsans_bold2"
                android:paddingStart="8dp"
                android:text="@string/poi_description"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/poi_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/poi_description"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/josefinsans_regular"
                android:paddingStart="8dp"
                android:text="@string/poi_address"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>