<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail_po_iactivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ads_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/josefinsans_bold2"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:drawableLeft="@drawable/ic_location_on_24"
            android:drawableTint="@color/orange_500"
            android:textColor="@color/grey_blue_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <TextView
            android:id="@+id/ads_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/josefinsans_regular"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->

        <View
            android:id="@+id/email_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/divider_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ads_address" />

        <TextView
            android:id="@+id/post_description_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/josefinsans_regular"
            android:justificationMode="inter_word"
            android:padding="8dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_divider" />


        <View
            android:id="@+id/additional_info_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/divider_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_description_id" />


        <TextView
            android:id="@+id/photo_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/josefinsans_bold2"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/pictures"
            android:textColor="@color/grey_blue_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/additional_info_divider" />

        <TextView
            android:id="@+id/show_all_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/josefinsans_bold2"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/viewAll"
            android:textColor="@color/grey_blue_700"
            app:drawableEndCompat="@drawable/ic_expand_more_24"
            android:drawableTint="@color/orange_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/additional_info_divider"
            app:tint="@color/orange_500" />

        <View
            android:id="@+id/photo_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/divider_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_information" />


        <!-- Add recyclerview here -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_pictures"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/photo_information"
            tools:listitem="@layout/list_photo_item" />

        <View
            android:id="@+id/owner_view_info_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:background="@color/divider_color"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_pictures" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_in_map"
            style="@style/CornerCutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/orange_500"
            android:fontFamily="@font/rubik_medium"
            android:onClick="makePayment"
            android:paddingLeft="35dp"
            android:paddingTop="10dp"
            android:paddingRight="35dp"
            android:paddingBottom="10dp"
            android:text="@string/view_on_map"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:icon="@drawable/ic_location_on_24"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_view_info_divider"
            app:layout_goneMarginBottom="12dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>